Update fligths data sets

--- a/flights/index.html
+++ b/flights/index.html
@@ -43,8 +43,11 @@
         <input type="radio" name="dataFile" id="flights20230225">
         <label for="flights20230225">Sun Feb 25</label>
 
-        <input type="radio" name="dataFile" id="flights20230225LI" checked>
+        <input type="radio" name="dataFile" id="flights20230225LI">
         <label for="flights20230225LI">Sun Feb 25 Logged In</label>
+
+        <input type="radio" name="dataFile" id="flights20230228" checked>
+        <label for="flights20230228">Tue Feb 28</label>
 
         <input type="radio" name="dataFile" id="DIFF">
         <label for="DIFF">Diff</label>
