Cleanup: fix an URL and remove obsolete example

--- a/clipboard-copy.html
+++ b/clipboard-copy.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <p><img id="myImage" src="http://kiewic.com/assets/images/power-bi-waffle-chart.png" height="100" /></p>
+  <p><img id="myImage" src="http://kiewic.github.io/assets/images/power-bi-waffle-chart.png" height="100" /></p>
   <p><a id="textLink" href="#">Copy text and HTML</a></p>
   <p><a id="imageLink" href="#">Copy image</a></p>
   <script>
