--- a/flights/index.html
+++ b/flights/index.html
@@ -54,6 +54,9 @@
 
         <input type="radio" name="dataFile" id="DIFF">
         <label for="DIFF">Diff</label>
+
+        <input type="checkbox" id="weekends">
+        <label for="weekends">Fri, Sat & Sun</label>
     </div>
 
     <div>
@@ -65,6 +68,7 @@
         <script>
             function loadData() {
                 const selectedFile = document.querySelector('input[name="dataFile"]:checked').id;
+                const isWeekends = document.querySelector('#weekends').checked;
                 const isDiff = selectedFile === 'DIFF';
 
                 if (isDiff) {
@@ -73,7 +77,9 @@
                     console.log(filename1, filename2);
 
                     d3.json(filename2).then(data2 => {
+                        data2 = filterWeekends(data2, isWeekends);
                         d3.json(filename1).then(data1 => {
+                            data2 = filterWeekends(data2, isWeekends);
                             const diffData = data2.map((route2, i) => {
                                 const route1 = data1.find(data1route => data1route.from === route2.from && data1route.to === route2.to);
                                 const diffDates = route2.dates.map((date2, j) => {
@@ -102,6 +108,7 @@
 
                 const filename = `${selectedFile}.json`;
                 d3.json(filename).then(data => {
+                    data = filterWeekends(data, isWeekends);
                     // Update the chart with new data
                     updateChart(data, isDiff);
                 }).catch(error => {
@@ -109,9 +116,17 @@
                 });
             }
 
+            function filterWeekends(data, isWeekends) {
+                return data.map(route => ({
+                    ...route,
+                    dates: route.dates.filter(date => !isWeekends || [0, 5, 6].includes(new Date(date.date).getUTCDay()))
+                }));
+            }
+
             function updateChart(inputData, isDiff) {
                 // Extract unique dates from the input and sort them
-                const uniqueDates = [...new Set(inputData.flatMap(route => route.dates.map(date => date.date)))].sort();
+                const uniqueDates = [...new Set(inputData.flatMap(route => route.dates.map(date => date.date)))]
+                    .sort();
 
                 // Set up the dimensions of the chart
                 const cellHeight = 40; // Adjusted cell height
@@ -220,7 +235,7 @@
                     const lines = [
                         `Route: ${route.from} to ${route.to}`,
                         `Date: ${nameOfDay} ${date}`,
-                        `Price: ${price != null ? price : ''}`,
+                        `<b>Price: ${price != null ? price : ''}</b>`,
                         `<small>Best: ${best != null ? `${best.price} on ${best.date}` : ''}</small>`,
                         `<small>Worst: ${worst != null ? `${worst.price} on ${worst.date}` : ''}</small>`,
                     ];
@@ -240,7 +255,7 @@
             loadData();
 
             // Event listener for radio button change
-            document.querySelectorAll('input[name="dataFile"]').forEach(radio => {
+            document.querySelectorAll('input[name="dataFile"], input[type="checkbox"]').forEach(radio => {
                 radio.addEventListener('change', loadData);
             });
         </script>
