Wed Mar 6 dataset

--- a/flights/index.html
+++ b/flights/index.html
@@ -43,14 +43,14 @@
         <input type="radio" name="dataFile" id="flights20240225">
         <label for="flights20240225">Sun Feb 25</label>
 
-        <input type="radio" name="dataFile" id="flights20240225LI">
-        <label for="flights20240225LI">Sun Feb 25 Logged In</label>
-
         <input type="radio" name="dataFile" id="flights20240228">
         <label for="flights20240228">Tue Feb 28</label>
 
-        <input type="radio" name="dataFile" id="flights20240305" checked>
-        <label for="flights20240305">Wed Mar 5</label>
+        <input type="radio" name="dataFile" id="flights20240305">
+        <label for="flights20240305">Tue Mar 5</label>
+
+        <input type="radio" name="dataFile" id="flights20240306" checked>
+        <label for="flights20240306">Wed Mar 6</label>
 
         <input type="radio" name="dataFile" id="DIFF">
         <label for="DIFF">Diff</label>
