Add Thu Mar 7 dataset

--- a/flights/index.html
+++ b/flights/index.html
@@ -52,8 +52,15 @@
         <input type="radio" name="dataFile" id="flights20240306" checked>
         <label for="flights20240306">Wed Mar 6</label>
 
+        <input type="radio" name="dataFile" id="flights20240306Login">
+        <label for="flights20240306Login">Wed Mar 6 Login</label>
+
+        <input type="radio" name="dataFile" id="flights20240307Login" checked>
+        <label for="flights20240307Login">Thu Mar 7 Login</label>
+
         <input type="radio" name="dataFile" id="DIFF">
         <label for="DIFF">Diff</label>
+    </div>
     <div>
         <input type="checkbox" id="friday">
         <label for="friday">Fri</label>
