Add Fri Mar 8 dataset

--- a/flights/index.html
+++ b/flights/index.html
@@ -55,8 +55,11 @@
         <input type="radio" name="dataFile" id="flights20240306Login">
         <label for="flights20240306Login">Wed Mar 6 Login</label>
 
-        <input type="radio" name="dataFile" id="flights20240307Login" checked>
+        <input type="radio" name="dataFile" id="flights20240307Login">
         <label for="flights20240307Login">Thu Mar 7 Login</label>
+
+        <input type="radio" name="dataFile" id="flights20240308" checked>
+        <label for="flights20240308">Fri Mar 8</label>
 
         <input type="radio" name="dataFile" id="DIFF">
         <label for="DIFF">Diff</label>
