Mon Mar 11 dataset

--- a/flights/index.html
+++ b/flights/index.html
@@ -58,8 +58,14 @@
         <input type="radio" name="dataFile" id="flights20240307Login">
         <label for="flights20240307Login">Thu Mar 7 Login</label>
 
-        <input type="radio" name="dataFile" id="flights20240308" checked>
+        <input type="radio" name="dataFile" id="flights20240308">
         <label for="flights20240308">Fri Mar 8</label>
+
+        <input type="radio" name="dataFile" id="flights20240311">
+        <label for="flights20240311">Mon Mar 11</label>
+
+        <input type="radio" name="dataFile" id="flights20240311Login" checked>
+        <label for="flights20240311Login">Mon Mar 11 Login</label>
 
         <input type="radio" name="dataFile" id="DIFF">
         <label for="DIFF">Diff</label>
