Add Wed Mar 13 dataset

--- a/flights/index.html
+++ b/flights/index.html
@@ -47,6 +47,9 @@
                 'flights20240311',
                 'flights20240311Login',
                 'flights20240312',
+                'flights20240312Login',
+                'flights20240313',
+                'flights20240313Login',
             ];
             const container = document.getElementById('fileOptions');
             files.forEach((file, index) => {
