--- a/flights/index.html
+++ b/flights/index.html
@@ -50,6 +50,13 @@
                 'flights20240312Login',
                 'flights20240313',
                 'flights20240313Login',
+                'flights20240314',
+                'flights20240315',
+                'flights20240317',
+                'flights20240318',
+                'flights20240318Login',
+                'flights20240319',
+                'flights20240320',
             ];
             const container = document.getElementById('fileOptions');
             files.forEach((file, index) => {
