--- a/calendar.html
+++ b/calendar.html
@@ -81,7 +81,7 @@
   <div class="dow">Sat</div>
 
   <!-- Week 1: Jan 17–23 -->
-  <div class="day"><div class="date">17</div><div class="events"></div></div>
+  <div class="day"><div class="date">17 · AO Start</div><div class="events"></div></div>
   <div class="day"><div class="date">18 · MLK</div><div class="events"></div></div>
   <div class="day"><div class="date">19</div><div class="events"></div></div>
   <div class="day"><div class="date">20</div><div class="events"></div></div>
@@ -89,13 +89,13 @@
   <div class="day">
     <div class="date">22</div>
     <div class="events">
-      <div class="event">Fly to Melbourne</div>
+      <div class="event">Flight to Sydney</div>
     </div>
   </div>
   <div class="day">
     <div class="date">23</div>
     <div class="events">
-      <div class="event">Fly to Melbourne</div>
+      <div class="event">Flight to Sydney</div>
     </div>
   </div>
 
@@ -103,51 +103,51 @@
   <div class="day">
     <div class="date">24</div>
     <div class="events">
-      <div class="event secondary">Melbourne day 1</div>
+      <div class="event secondary">Sydney day 1</div>
     </div>
   </div>
   <div class="day">
     <div class="date">25</div>
     <div class="events">
-      <div class="event secondary">Melbourne day 2</div>
+      <div class="event secondary">Sydney day 2</div>
     </div>
   </div>
   <div class="day">
     <div class="date">26</div>
     <div class="events">
-      <div class="event secondary">Melbourne day 3</div>
+      <div class="event secondary">Sydney day 3</div>
     </div>
   </div>
   <div class="day">
     <div class="date">27</div>
     <div class="events">
-      <div class="event">Fly to Sydney</div>
+      <div class="event">Fly to Melbourne</div>
     </div>
   </div>
   <div class="day">
     <div class="date">28</div>
     <div class="events">
-      <div class="event secondary">Sydney day 1</div>
+      <div class="event secondary">Melbourne day 1</div>
     </div>
   </div>
   <div class="day">
     <div class="date">29</div>
     <div class="events">
-      <div class="event secondary">Sydney day 2</div>
+      <div class="event secondary">Melbourne day 2</div>
     </div>
   </div>
   <div class="day">
     <div class="date">30</div>
     <div class="events">
-      <div class="event secondary">Sydney day 3</div>
+      <div class="event secondary">Melbourne day 3</div>
     </div>
   </div>
 
   <!-- Week 3: Jan 31–Feb 6 -->
   <div class="day">
-    <div class="date">31</div>
+    <div class="date">31 · AO End</div>
     <div class="events">
-      <div class="event">Fly to Singapore</div>
+      <div class="event">Flight to Singapore</div>
     </div>
   </div>
   <div class="day">
@@ -165,7 +165,7 @@
   <div class="day">
     <div class="date">3</div>
     <div class="events">
-      <div class="event">Fly to KL</div>
+      <div class="event">Flight to KL</div>
     </div>
   </div>
   <div class="day">
@@ -191,7 +191,7 @@
   <div class="day">
     <div class="date">7</div>
     <div class="events">
-      <div class="event">Fly to Seattle</div>
+      <div class="event">Flight to Seattle</div>
     </div>
   </div>
   <div class="day"><div class="date">8</div><div class="events"></div></div>
