--- a/calendar.html
+++ b/calendar.html
@@ -81,126 +81,82 @@
   <div class="dow">Sat</div>
 
   <!-- Week 1: Jan 17–23 -->
-  <div class="day"><div class="date">17 · AO Start</div><div class="events"></div></div>
-  <div class="day"><div class="date">18 · MLK</div><div class="events"></div></div>
-  <div class="day"><div class="date">19</div><div class="events"></div></div>
-  <div class="day"><div class="date">20</div><div class="events"></div></div>
-  <div class="day"><div class="date">21</div><div class="events"></div></div>
-  <div class="day">
-    <div class="date">22</div>
-    <div class="events">
-      <div class="event">Flight to Sydney</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">23</div>
-    <div class="events">
-      <div class="event">Flight to Sydney</div>
-    </div>
-  </div>
+  <div class="day" id="Jan17"><div class="date">17 · AO Start</div><div class="events"></div></div>
+  <div class="day" id="Jan18"><div class="date">18 · MLK</div><div class="events"></div></div>
+  <div class="day" id="Jan19"><div class="date">19</div><div class="events"></div></div>
+  <div class="day" id="Jan20"><div class="date">20</div><div class="events"></div></div>
+  <div class="day" id="Jan21"><div class="date">21</div><div class="events"></div></div>
+  <div class="day" id="Jan22"><div class="date">22</div><div class="events"></div></div>
+  <div class="day" id="Jan23"><div class="date">23</div><div class="events"></div></div>
 
   <!-- Week 2: Jan 24–30 -->
-  <div class="day">
-    <div class="date">24</div>
-    <div class="events">
-      <div class="event secondary">Sydney day 1</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">25</div>
-    <div class="events">
-      <div class="event secondary">Sydney day 2</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">26</div>
-    <div class="events">
-      <div class="event secondary">Sydney day 3</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">27</div>
-    <div class="events">
-      <div class="event">Fly to Melbourne</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">28</div>
-    <div class="events">
-      <div class="event secondary">Melbourne day 1</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">29</div>
-    <div class="events">
-      <div class="event secondary">Melbourne day 2</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">30</div>
-    <div class="events">
-      <div class="event secondary">Melbourne day 3</div>
-    </div>
-  </div>
+  <div class="day" id="Jan24"><div class="date">24</div><div class="events"></div></div>
+  <div class="day" id="Jan25"><div class="date">25</div><div class="events"></div></div>
+  <div class="day" id="Jan26"><div class="date">26</div><div class="events"></div></div>
+  <div class="day" id="Jan27"><div class="date">27</div><div class="events"></div></div>
+  <div class="day" id="Jan28"><div class="date">28</div><div class="events"></div></div>
+  <div class="day" id="Jan29"><div class="date">29</div><div class="events"></div></div>
+  <div class="day" id="Jan30"><div class="date">30</div><div class="events"></div></div>
 
   <!-- Week 3: Jan 31–Feb 6 -->
-  <div class="day">
-    <div class="date">31 · AO End</div>
-    <div class="events">
-      <div class="event">Flight to Singapore</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">Feb 1</div>
-    <div class="events">
-      <div class="event secondary">Singapore day 1</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">2</div>
-    <div class="events">
-      <div class="event secondary">Singapore day 2</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">3</div>
-    <div class="events">
-      <div class="event">Flight to KL</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">4</div>
-    <div class="events">
-      <div class="event secondary">KL day 1</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">5</div>
-    <div class="events">
-      <div class="event secondary">KL day 2</div>
-    </div>
-  </div>
-  <div class="day">
-    <div class="date">6 · CNY</div>
-    <div class="events">
-      <div class="event secondary">KL day 3</div>
-    </div>
-  </div>
+  <div class="day" id="Jan31"><div class="date">31 · AO End</div><div class="events"></div></div>
+  <div class="day" id="Feb1"><div class="date">Feb 1</div><div class="events"></div></div>
+  <div class="day" id="Feb2"><div class="date">2</div><div class="events"></div></div>
+  <div class="day" id="Feb3"><div class="date">3</div><div class="events"></div></div>
+  <div class="day" id="Feb4"><div class="date">4</div><div class="events"></div></div>
+  <div class="day" id="Feb5"><div class="date">5</div><div class="events"></div></div>
+  <div class="day" id="Feb6"><div class="date">6 · CNY</div><div class="events"></div></div>
 
   <!-- Week 4: Feb 7–13 -->
-  <div class="day">
-    <div class="date">7</div>
-    <div class="events">
-      <div class="event">Flight to Seattle</div>
-    </div>
-  </div>
-  <div class="day"><div class="date">8</div><div class="events"></div></div>
-  <div class="day"><div class="date">9</div><div class="events"></div></div>
-  <div class="day"><div class="date">10</div><div class="events"></div></div>
-  <div class="day"><div class="date">11</div><div class="events"></div></div>
-  <div class="day"><div class="date">12</div><div class="events"></div></div>
-  <div class="day"><div class="date">13</div><div class="events"></div></div>
+  <div class="day" id="Feb7"><div class="date">7</div><div class="events"></div></div>
+  <div class="day" id="Feb8"><div class="date">8</div><div class="events"></div></div>
+  <div class="day" id="Feb9"><div class="date">9</div><div class="events"></div></div>
+  <div class="day" id="Feb10"><div class="date">10</div><div class="events"></div></div>
+  <div class="day" id="Feb11"><div class="date">11</div><div class="events"></div></div>
+  <div class="day" id="Feb12"><div class="date">12</div><div class="events"></div></div>
+  <div class="day" id="Feb13"><div class="date">13</div><div class="events"></div></div>
 </div>
+
+<script>
+  const calendarEvents = [
+    { dayId: "Jan23", text: "Flight to Melbourne", variant: "" },
+    { dayId: "Jan24", text: "Flight to Melbourne", variant: "" },
+    { dayId: "Jan25", text: "Melbourne day 1", variant: "secondary" },
+    { dayId: "Jan26", text: "Melbourne day 2", variant: "secondary" },
+    { dayId: "Jan27", text: "Melbourne day 3", variant: "secondary" },
+    { dayId: "Jan28", text: "Flight to Sydney", variant: "" },
+    { dayId: "Jan29", text: "Sydney day 1", variant: "secondary" },
+    { dayId: "Jan30", text: "Sydney day 2", variant: "secondary" },
+    { dayId: "Jan31", text: "Sydney day 3", variant: "secondary" },
+    { dayId: "Feb1", text: "Flight to Singapore", variant: "" },
+    { dayId: "Feb2", text: "Singapore day 1", variant: "secondary" },
+    { dayId: "Feb3", text: "Singapore day 2", variant: "secondary" },
+    { dayId: "Feb4", text: "Flight to KL", variant: "" },
+    { dayId: "Feb5", text: "KL day 1", variant: "secondary" },
+    { dayId: "Feb6", text: "KL day 2", variant: "secondary" },
+    { dayId: "Feb7", text: "KL day 3", variant: "secondary" },
+    { dayId: "Feb8", text: "Flight to Seattle", variant: "" },
+  ];
+
+  window.addEventListener("DOMContentLoaded", () => {
+    calendarEvents.forEach(({ dayId, text, variant }) => {
+      const day = document.getElementById(dayId);
+      if (!day) {
+        return;
+      }
+
+      const eventsContainer = day.querySelector(".events");
+      if (!eventsContainer) {
+        return;
+      }
+
+      const eventEl = document.createElement("div");
+      eventEl.className = variant ? `event ${variant}` : "event";
+      eventEl.textContent = text;
+      eventsContainer.appendChild(eventEl);
+    });
+  });
+</script>
 
 </body>
 </html>
